# serializer version: 1
# name: TestResponsesCount.test_responses_count
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, '$survey_id'), ''), 'null'), '^"|"$', '') AS survey_id,
         count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), equals(events.event, 'survey sent'), greaterOrEquals(events.timestamp, toDateTime64('2024-01-21 14:40:09.000000', 6, 'UTC')), globalIn(events.uuid,
                                                                                                                                                                                    (SELECT argMax(events.uuid, toTimeZone(events.timestamp, 'UTC')) AS `argMax(uuid, toTimeZone(timestamp, 'UTC'))`
                                                                                                                                                                                     FROM events
                                                                                                                                                                                     WHERE and(equals(events.team_id, 99999), equals(events.event, 'survey sent'), greaterOrEquals(events.timestamp, toDateTime64('2024-01-21 14:40:09.000000', 6, 'UTC')))
                                                                                                                                                                                     GROUP BY replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, '$survey_id'), ''), 'null'), '^"|"$', ''), if(ifNull(equals(coalesce(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, '$survey_submission_id'), ''), 'null'), '^"|"$', ''), ''), ''), 0), toString(events.uuid), replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, '$survey_submission_id'), ''), 'null'), '^"|"$', '')))))
  GROUP BY survey_id
  LIMIT 50000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1,
                       max_ast_elements=4000000,
                       max_expanded_ast_elements=4000000,
                       max_bytes_before_external_group_by=0,
                       transform_null_in=1,
                       optimize_min_equality_disjunction_chain_length=4294967295,
                       optimize_rewrite_aggregate_function_with_if=0,
                       optimize_min_inequality_conjunction_chain_length=4294967295,
                       allow_experimental_join_condition=1,
                       use_hive_partitioning=0
  '''
# ---
# name: TestResponsesCount.test_responses_count_only_after_first_survey_started
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, '$survey_id'), ''), 'null'), '^"|"$', '') AS survey_id,
         count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), equals(events.event, 'survey sent'), greaterOrEquals(events.timestamp, toDateTime64('2024-04-25 14:40:09.000000', 6, 'UTC')), globalIn(events.uuid,
                                                                                                                                                                                    (SELECT argMax(events.uuid, toTimeZone(events.timestamp, 'UTC')) AS `argMax(uuid, toTimeZone(timestamp, 'UTC'))`
                                                                                                                                                                                     FROM events
                                                                                                                                                                                     WHERE and(equals(events.team_id, 99999), equals(events.event, 'survey sent'), greaterOrEquals(events.timestamp, toDateTime64('2024-04-25 14:40:09.000000', 6, 'UTC')))
                                                                                                                                                                                     GROUP BY replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, '$survey_id'), ''), 'null'), '^"|"$', ''), if(ifNull(equals(coalesce(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, '$survey_submission_id'), ''), 'null'), '^"|"$', ''), ''), ''), 0), toString(events.uuid), replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, '$survey_submission_id'), ''), 'null'), '^"|"$', '')))))
  GROUP BY survey_id
  LIMIT 50000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1,
                       max_ast_elements=4000000,
                       max_expanded_ast_elements=4000000,
                       max_bytes_before_external_group_by=0,
                       transform_null_in=1,
                       optimize_min_equality_disjunction_chain_length=4294967295,
                       optimize_rewrite_aggregate_function_with_if=0,
                       optimize_min_inequality_conjunction_chain_length=4294967295,
                       allow_experimental_join_condition=1,
                       use_hive_partitioning=0
  '''
# ---
# name: TestResponsesCount.test_responses_count_with_partial_responses
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, '$survey_id'), ''), 'null'), '^"|"$', '') AS survey_id,
         count() AS `count()`
  FROM events
  WHERE and(equals(events.team_id, 99999), equals(events.event, 'survey sent'), greaterOrEquals(events.timestamp, toDateTime64('2024-06-10 11:00:00.000000', 6, 'UTC')), globalIn(events.uuid,
                                                                                                                                                                                    (SELECT argMax(events.uuid, toTimeZone(events.timestamp, 'UTC')) AS `argMax(uuid, toTimeZone(timestamp, 'UTC'))`
                                                                                                                                                                                     FROM events
                                                                                                                                                                                     WHERE and(equals(events.team_id, 99999), equals(events.event, 'survey sent'), greaterOrEquals(events.timestamp, toDateTime64('2024-06-10 11:00:00.000000', 6, 'UTC')))
                                                                                                                                                                                     GROUP BY replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, '$survey_id'), ''), 'null'), '^"|"$', ''), if(ifNull(equals(coalesce(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, '$survey_submission_id'), ''), 'null'), '^"|"$', ''), ''), ''), 0), toString(events.uuid), replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, '$survey_submission_id'), ''), 'null'), '^"|"$', '')))))
  GROUP BY survey_id
  LIMIT 50000 SETTINGS readonly=2,
                       max_execution_time=60,
                       allow_experimental_object_type=1,
                       max_ast_elements=4000000,
                       max_expanded_ast_elements=4000000,
                       max_bytes_before_external_group_by=0,
                       transform_null_in=1,
                       optimize_min_equality_disjunction_chain_length=4294967295,
                       optimize_rewrite_aggregate_function_with_if=0,
                       optimize_min_inequality_conjunction_chain_length=4294967295,
                       allow_experimental_join_condition=1,
                       use_hive_partitioning=0
  '''
# ---
